fix(inline-notfication): remove top margin on mobile

--- a/packages/components/src/components/notification/_inline-notification.scss
+++ b/packages/components/src/components/notification/_inline-notification.scss
@@ -191,7 +191,7 @@
 
   .#{$prefix}--inline-notification__action-button.#{$prefix}--btn--ghost {
     height: rem(32px);
-    margin: $carbon--spacing-03 0;
+    margin-bottom: $carbon--spacing-03;
     margin-left: $carbon--spacing-08;
 
     @include carbon--breakpoint(md) {
